--- a/truncate/style.css
+++ b/truncate/style.css
@@ -1,7 +1,5 @@
-*, *::before, *::after {
+*, *::before, *after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 html {
     scroll-behavior: smooth;
@@ -47,7 +45,6 @@ main{
     width: 80%;
     margin: 0 auto;
 }
-
 header, footer {
     flex-grow: 0;
     flex-shrink: 0;
@@ -56,6 +53,11 @@ header, footer {
     box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06); /* Shadow */
     padding: 1.5rem 1rem;
 }
+/* Truncate text styling */
+.truncate {
+    padding: 0.5rem;
+}
+
 /* Footer styling */
 .footer-container {
     max-width: 80rem; /* Equivalent to max-w-7xl */
