--- a/image-scroll/style.css
+++ b/image-scroll/style.css
@@ -1,7 +1,5 @@
-*, *::before, *::after {
+*, *::before, *after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 html {
     scroll-behavior: smooth;
@@ -47,7 +45,22 @@ main{
     width: 80%;
     margin: 0 auto;
 }
-
+.image{
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    margin-bottom: 2rem;
+    border-radius: 0.5rem;
+    transform: scale(0.85);
+    filter: blur(20px);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); /* Shadow */
+    transition: transform 0.5s ease, box-shadow 0.5s ease, filter 0.5s ease, opacity 0.5s ease;
+}
+.loaded {
+    transform: scale(1);
+    filter: blur(0);
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04); /* Enhanced Shadow */
+}
 header, footer {
     flex-grow: 0;
     flex-shrink: 0;
