--- a/scroll-animation/style.css
+++ b/scroll-animation/style.css
@@ -1,7 +1,5 @@
-*, *::before, *::after {
+*, *::before, *after {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 html {
     scroll-behavior: smooth;
@@ -56,6 +54,55 @@ header, footer {
     box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06); /* Shadow */
     padding: 1.5rem 1rem;
 }
+/* Scroll Animation Container */
+.container {
+    display: flex;
+    gap: 2rem;
+}
+
+.scroll-content {
+    padding: 1rem;
+    width: 40%;
+}
+.scroll-content > .story{
+    height: 100vh;
+}
+.sticky-display > div {
+    position: sticky;
+    top: 5rem;
+    width: 100%;
+}
+.bg-overlay{
+    /* background-color: #000; */
+    position: relative;
+}
+.bg-overlay *{
+    border-radius: .8rem;
+}
+.bg-overlay img {
+    width: 100%;
+    height: 80vh;
+    z-index: 100;
+    /* object-fit: cover; */
+}
+.bg-black{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -100;
+    opacity: 0.2;
+    transition: background-color 0.5s ease-in-out;
+    /* inset: 0; */
+    /* background-color: rgba(0, 0, 0, 0.3); */
+}
+/* .bg-overlay img {
+    opacity: 0.7;
+} */
+/* .sticky-img{
+    transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+} */
 /* Footer styling */
 .footer-container {
     max-width: 80rem; /* Equivalent to max-w-7xl */
