--- a/flex/flex.css
+++ b/flex/flex.css
@@ -12,7 +12,9 @@ body{
 }
 /*parent*/
 .container{
+    border: 1px solid black;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
     width: 100%;
@@ -21,11 +23,14 @@ body{
     align-items: center;
     /* flex: 1; */
 }
+.container + .container{
+    margin-top: 1rem;
+}
 /*child*/
 .item{
     height: 100px;
     padding: 20px;
     background-color: red;
     color: white;
-    /* flex: 0 1 20em; */
+    flex: 0 1 20em;
 }
