--- a/download-progress/style.css
+++ b/download-progress/style.css
@@ -59,9 +59,41 @@ header, footer {
 
 .container{
     display: flex;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     height: 50vh;
+}
+.downloading-text{
+    transition: opacity 0.7s ease, visibility 0.7s ease, transform 0.7s ease;
+}
+.hide{
+    opacity: 0;
+    transform: translateY(-50px);
+    visibility: hidden;
+}
+.active{
+    opacity: 1;
+    transform: translateY(0px);
+    visibility: visible;
+}
+.btn{
+    padding: 0.5rem 1rem;
+    background-color: #02c9bc;
+    color: #fff;
+    border: none;
+    border-radius: 0.375rem;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* Shadow */
+}
+.disabled{
+    cursor: not-allowed;
+    background-color: #94a3b8;
+}
+.download{
+    margin-top: 2rem;
 }
 .download-bar{
     width: 300px;
@@ -74,13 +106,19 @@ header, footer {
     width: 0px;
     height: 15px;
     border-radius: 15px;
-    transition: all 0.1s ease;
+    transition: width 0.3s ease;
 }
 .progress-number{
     width: 20%;
     margin: 0 auto;
     margin-top: 20px;
     font-weight: bold;
+}
+.text{
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 1.125rem;
+    color: #4a5568; /* Equivalent to text-gray-700 */
 }
 /* Footer styling */
 .footer-container {
