--- a/pop-up on scroll/style.css
+++ b/pop-up on scroll/style.css
@@ -67,12 +67,12 @@ ul li {
     justify-content: center;
     height: 30vh;
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateX(-100%);
     transition: opacity 0.8s ease, transform 0.8s ease;
 }
 .visible{
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
 }
 
 /* Footer styling */
