--- a/reading-scroll-annimation/style.css
+++ b/reading-scroll-annimation/style.css
@@ -1,17 +1,25 @@
+.container{
+  width: 60%;
+  margin: 0 auto;
+}
 .container::before {
   content: '';
   position: fixed;
   top: 0;
   left: 0;
-  right: 0; /*scale မယ်ဆိုရင် right 0 ထားမှ left to right အပြည့် 
+  right: 0; 
+  /*scale မယ်ဆိုရင် right 0 ထားမှ left to right အပြည့် 
             width ယူဖို့ browser ကနားလည်မယ်။ width 0 -> 100% နဲ့ရေးမယ်ဆို မလိုဘူး။*/
   transform: scaleX(0);
-  transform-origin: left; /*transform စဖြစ်စေမဲ့ အမှတ်က center default မို့ left ကနေ စဖြစ်အောင် ဒါထည့်ရမယ်။*/
+  /* transform-origin: 0% 50%; */
+  transform-origin: left; 
+  /*transform စဖြစ်စေမဲ့ အမှတ်က center default မို့ left ကနေ စဖြစ်အောင် ဒါထည့်ရမယ်။*/
   height: 6px;
-  background: red;
+  background: linear-gradient(to right, #4f46e5, #06b6d4);
   pointer-events: none;
   animation: progess linear both;
-  animation-timeline: scroll(); /*Scroll တိုင်း effect ဝင်ဖို့ ဒါကအရေးကြီးတယ်*/
+  animation-timeline: scroll(); 
+  /*Scroll တိုင်း effect ဝင်ဖို့ ဒါကအရေးကြီးတယ်*/
   z-index: 2;
 }
 @keyframes progess {
