--- a/tab/style.css
+++ b/tab/style.css
@@ -43,26 +43,31 @@ main{
     width: 80%;
 }
 .tabs{
-    border-bottom: 1px solid #4a5568; /* Equivalent to border-gray-700 */
     margin-bottom: 2rem;
     width: fit-content;
     display: flex;
+    background-color: #F5F5F5;
+    padding: 0.3rem;
+    border-radius: 12px;
 }
 .tabs .tab-button{
     white-space: nowrap;
     cursor: pointer;
     display: inline-block;
-    padding: 0.5rem 2rem;
+    padding: 0.3rem 1rem;
     margin: 0 1rem;
+    font-weight: 600;
     text-decoration: none;
-    color: #fcfcfc; 
+    color: #333; /* Equivalent to text-gray-400 */
+    border-radius: 8px;
     transition: all 0.3s ease;
-    background-color: #2b87a8;
+    /* background-color: #FFFFFF; */
 }
 
 .tabs .tab-button.active{
-    background-color: rgb(124, 205, 234);
-    color: black;
+    background-color: #FFFFFF;
+    color: #000;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); /* Shadow */
 }
 
 .tab-content{
